--- a/src/components/productDetail/ProductDetail.scss
+++ b/src/components/productDetail/ProductDetail.scss
@@ -86,4 +86,17 @@
       }
     }
   }
+
+  &__toast {
+    margin-top: 60px;
+    font-size: 1.3rem;
+
+    @media only screen and (max-width: 700px) {
+      margin-top: 100px;
+    }
+
+    @media only screen and (max-width: 480px) {
+      margin-top: 110px;
+    }
+  }
 }
