--- a/src/pages/productView/ProductView.scss
+++ b/src/pages/productView/ProductView.scss
@@ -7,10 +7,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-
-    // @media only screen and (max-width: 930px) {
-    //   margin-top: 80px;
-    // }
+    flex-wrap: wrap;
 
     @media only screen and (max-width: 760px) {
       flex-direction: column;
@@ -35,6 +32,15 @@
     @media only screen and (max-width: 930px) {
       width: 35%;
     }
+
+    @media only screen and (max-width: 760px) {
+      width: 100%;
+    }
+  }
+
+  &__productReviews {
+    margin-top: 40px;
+    width: 70%;
 
     @media only screen and (max-width: 760px) {
       width: 100%;
